# shoveler-spatialos

./: .gitignore  BUILD  BashWrapper.cs  CMakeLists.txt  CMakeLists.txt.external.in  LICENSE  README.md  WORKSPACE  bot.sh  default_launch.json  inspector.sh  lights.json  lights_standalone.json  prepare-assembly.sh  runtime.sh  shoveler.pb.json  shoveler_100bots.pb.json  shoveler_50bots.pb.json  shoveler_uniform.pb.json  spatialos.json  spatialos.tiles.json  tiles.json  tiles_standalone.json  tiles_uniform_bots.json  valgrind.supp
assets/: CMakeLists.txt
assets/characters/: player1.png.sha256  player3.png.sha256
assets/fonts/: OpenSans.ttf.sha256
assets/tilesets/: autumn.png.sha256
jwtmaker/: CMakeLists.txt  go.mod  main.go  public_key.pem
schema/: BUILD  CMakeLists.txt  schema_generator.c  shoveler.schema
seeders/: BUILD  CMakeLists.txt  lights.c  lights.cpp  map.c  map.h  tiles.c  tiles.cpp  tileset.c  tileset.h
seeders/tiles/: map.cpp  map.h  tileset.cpp
shoveler/: CMakeLists.txt
shoveler/client/: CMakeLists.txt
shoveler/jwtmaker_src/: private_key.pem
shoveler/opengl/src/: input.c
shoveler/view_base/src/: view.c
tools/: deployment.bzl  schema.bzl  spatial_package.bzl
worker_sdk/: CMakeLists.txt
workers/: CMakeLists.txt
workers/bot_client/: BUILD  CMakeLists.txt  bot_client.c  bot_client.cpp  connect.cpp  worker.json
workers/c_client/: CMakeLists.txt  client.c  configuration.c  configuration.h  connect.c  connect.h  interest.c  schema.c  schema.h  worker.LauncherClient.json  worker.json
workers/c_server/: CMakeLists.txt  server.c  worker.json
workers/c_updater/: CMakeLists.txt  updater.c
workers/client/: BUILD  CMakeLists.txt  canvas.cpp  canvas.h  chunk.cpp  chunk.h  chunk_layer.cpp  chunk_layer.h  client.c  client.cpp  configuration.c  configuration.cpp  configuration.h  connect.c  connect.cpp  connect.h  drawable.cpp  drawable.h  image.cpp  image.h  interest.c  interest.cpp  interest.h  light.cpp  light.h  material.cpp  metadata.cpp  model.cpp  position.cpp  position.h  resource.cpp  sampler.cpp  sampler.h  schema.c  schema.h  spatialos_client_schema.c  spatialos_client_schema.h  sprite.cpp  sprite.h  texture.cpp  (+12 more)
workers/cmake/: .gitignore  CMakeLists.txt  cmake-build.sh  cmake-pack.sh  cmake.sh  generate-seed-snapshot.sh  spatialos.ShovelerAssetUpdater.worker.json  spatialos.ShovelerClient.worker.json  spatialos.ShovelerServer.worker.json  spatialos.seeder.worker.json  spatialos_worker_packages.json  valgrind.supp
workers/cmake/assets/: CMakeLists.txt
workers/cmake/assets/characters/: player2.png.sha256  player4.png.sha256
workers/cmake/assets/tilesets/: spring.png.sha256
workers/cmake/client/: CMakeLists.txt  canvas.cpp  client.cpp  configuration.cpp  connect.cpp  coordinate_mapping.h  drawable.cpp  interest.cpp  interest.h  main.cpp  material.cpp  material.h  metadata.h  model.cpp  model.h  position.cpp  position.h  resource.h  texture.cpp  tile_sprite.cpp  tile_sprite.h  tile_sprite_animation.h  tilemap.h  tilemap_tiles.cpp  tilemap_tiles.h  worker_view.c  worker_view.h
workers/cmake/common/: CMakeLists.txt
workers/cmake/common/include/shoveler/spatialos/: log.h
workers/cmake/common/src/: log.c
workers/cmake/seeder/: CMakeLists.txt  seeder.cpp  tiles.cpp
workers/cmake/seeder/tiles/: map.cpp  map.h  tileset.h
workers/cmake/server/: CMakeLists.txt  server.cpp
workers/cmake/updater/: CMakeLists.txt  updater.cpp
workers/cmake/view/: CMakeLists.txt
workers/cmake/view/base/: CMakeLists.txt
workers/cmake/view/base/include/shoveler/spatialos/worker/view/base/: position.h  view.h
workers/cmake/view/base/src/: position.c  view.c
workers/cmake/view/visual/: CMakeLists.txt
workers/cmake/view/visual/include/shoveler/spatialos/worker/view/visual/: client.h  controller.h  drawables.h  light.h  model.h  scene.h
workers/cmake/view/visual/src/: client.c  drawables.c  light.c  model.c
workers/cmake/worker_sdk/: CMakeLists.txt
workers/common/: BUILD  CMakeLists.txt
workers/common/include/shoveler/: authorization_token.h  configuration.h  connect.h  schema.h  spatialos_schema.h  worker_log.h
workers/common/src/: authorization_token.c  configuration.c  connect.c  schema.c  spatialos_schema.c  worker_log.c
workers/server/: BUILD  CMakeLists.txt  configuration.c  configuration.h  server.c  server.cpp  worker.json  worker.tiles.json
workers/shoveler/: .gitignore  CMakeLists.txt
workers/shoveler/client/: CMakeLists.txt  main.cpp
workers/shoveler/src/: CMakeLists.txt
workers/updater/: BUILD  CMakeLists.txt  updater.c  updater.cpp  worker.json
